Fix spacing on <AppBar/>

--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -9,8 +9,7 @@
 
     width: 100vw;
     height: variables.$app-bar-height;
-    padding: 1rem;
-    padding-right: 1.5rem;
+    padding: 0.75rem 1rem;
 
     background-color: variables.$card-bg;
     border-bottom: variables.$border-width solid variables.$outlined-border;
